--- a/mailgun.config
+++ b/mailgun.config
@@ -1,5 +1,12 @@
-# NOT YET IMPLANTED
-#MAILGUN_API_KEY=your_mailgun_api_key
-MAILGUN_DOMAIN=your mailgun domain
-#MAILGUN_EMAIL_LIST=email1@example.com,email2@example.com:
+# create and setup your mailgun.com account for free to use the email functions.
+# use app argument -e to enable this.
 
+MAILGUN_API_KEY  = mailgun_API_KEY
+MAILGUN_DOMAIN   = your.mailgun.domain
+MAILGUN_EMAIL_TO = your@address.com
+
+# if your mailgun account is a free (non-paid) account, you have to manually add e-mails that
+# wants to recive trade reports to the "Authorized Recipients" list to your mailgun domain.
+# if you have a upgraded (paid) account, set the below value to true
+
+MAILGUN_PAID     = false
